--- a/mtrf.tex
+++ b/mtrf.tex
@@ -181,9 +181,12 @@ LOCATION                &   The location or spatial orientation of the event \\
 \end{table}
 
 
-\subsection{Event Knowledge and Event Representation} \label{sec:event}
-In psycholinguistics and cognitive science, experiments have shown that event knowledge plays a crucial role in human sentence processing \citep{camblin2007interplay}. On one hand, predicates prime event participant referring to good fillers of their semantic role in an event \citep{ferretti2001integrating}. On the other hand, priming effect can be also found from event participants to predicates \citep{mcrae2005basis}. These two works reveal that model performances of predicate prediction and participant prediction can be evaluated via correlation with human judgement. In a wider range, event-level information affects verbal arguments processing of human \citep{bicknell2010effects}. Comprehenders integrate information not only from predicate but also other event participants mentioned in discourse. Although there are plenty of results from different forms of psycholinguistic experiments like event-related potential, eye-tracking and human judgement, most of these experiments have a relatively small size of evaluation entries and a limited number of participants. It has been shown that corpus-based method can be considered as a large-scale simulation of human acquisition of linguistic or conceptual information from the world \citep{landauer1997solution}. To verify the results from psycholinguistic experiments, it is necessary to build corpus-based cognitive models of events. 
+\subsection{Event Knowledge} \label{sec:event}
+In psycholinguistics and cognitive science, experiments have shown that event knowledge plays a crucial role in human sentence processing \citep{camblin2007interplay}. On one hand, predicates prime event participant referring to good fillers of their semantic role in an event \citep{ferretti2001integrating}. On the other hand, priming effect can be also found from event participants to predicates \citep{mcrae2005basis}. These two works reveal that model performances of predicate prediction and participant prediction can be evaluated via correlation with human judgement. 
 
+In a wider range, event-level information affects verbal arguments processing of human \citep{bicknell2010effects}. Comprehenders integrate information not only from predicate but also other event participants mentioned in discourse. Although there are plenty of results from different forms of psycholinguistic experiments like event-related potential, eye-tracking and human judgement, most of these experiments have a relatively small size of evaluation entries and a limited number of participants. It has been shown that corpus-based method can be considered as a large-scale simulation of human acquisition of linguistic or conceptual information from the world \citep{landauer1997solution}. To verify the results from psycholinguistic experiments, it is necessary to build corpus-based cognitive models of events. 
+
+\subsection{Event Representation and Semantic Role Model} \label{sec:semanticrole}
 In early research, events were represented using first order logic. For the event in the example sentence (\ref{eg:sent1}), the representation is:
 \begin{equation*} \label{eg:fol}
 \begin{aligned}
@@ -211,9 +214,7 @@ where each thematic role is acting as a logical predicate of the event $e$ and t
 % 
 % ^.
 
-
-\subsection{Semantic Role Model} \label{sec:semanticrole}
-Thematic role is the oldest semantic role model which is formalised by \citet{gruber1965studies} and \citet{fillmore1968case} in modern time. The inventory of roles usually contains \texttt{AGENT}, PATIENT, INSTRUMENT and LOCATION \citep{aarts2013english}. Table \ref{tab:thematic} shows informal definitions of them \citep{jurafsky2014speech}. One disadvantage of thematic roles is that the range of role inventory is difficult to decide. Even worse, the formal definitions of thematic roles are controversial. 
+Thematic role is the oldest semantic role model which is formalised by \citet{gruber1965studies} and \citet{fillmore1968case} in modern time. The inventory of roles usually contains \texttt{AGENT}, \texttt{PATIENT}, \texttt{INSTRUMENT} and \texttt{LOCATION} \citep{aarts2013english}. Table \ref{tab:thematic} shows informal definitions of them \citep{jurafsky2014speech}. One disadvantage of thematic roles is that the range of role inventory is difficult to decide. Even worse, the formal definitions of thematic roles are controversial. 
 
 The Proposition Bank (PropBank) is an annotated corpus of semantic roles based on Penn TreeBank \citep{palmer2005proposition}. It also provides an effective semantic role model which we will adopt. Table \ref{tab:propbank} shows examples of semantic roles in PropBank style. The definitions are based on the PropBank Annotation Guidelines \citep{bonial2010propbank}. Arguments required for the valency of a predicate are listed with numbers. Modifiers, which are relatively stable across predicates, are marked with ArgMs. While PropBank focuses on verbal predicates, NomBank adds annotations to nominal predicates \citep{meyers2004nombank}. 
 
@@ -300,10 +301,10 @@ The distributed representation of words, popularly known as word embedding, can 
 
 \newpage
 \section{Representation of Predicates and Participants}
-We intend to learn meaningful representation of event structure in semantic space. In \textit{neo-Davidsonian event representation}, we notice that linguistic predicates can be further generalised. So we define a special role PRD for predicates. The example \ref{eg:neodavidsonian} can be rewritten as: 
+We intend to learn meaningful representation of event structure in semantic space. In \textit{neo-Davidsonian event representation}, we notice that linguistic predicates can be further generalised. So we define a special role \texttt{PRD} for predicates. The example \ref{eg:neodavidsonian} can be rewritten as: 
 \begin{equation*} \label{eg:symbolic-thematic}
 \begin{aligned}
-    \exists e\ \text{PRD}(e, \text{cut})
+    \exists e\ \texttt{PRD}(e, \text{cut})
     & \land \texttt{AGENT}(e, \text{cook}) \land \texttt{PATIENT}(e, \text{cake}) \\
     & \land \texttt{INSTRUMENT}(e, \text{knife}) \land \texttt{LOCATION}(e, \text{kitchen}) \\
 \end{aligned}
@@ -312,12 +313,12 @@ We intend to learn meaningful representation of event structure in semantic spac
 If we specify the sense of the predicate $cut$, thematic roles can be replaced with PropBank style semantic roles as: 
 \begin{equation*} \label{eg:symbolic-semantic}
 \begin{aligned}
-    \exists e\ \text{PRD}(e, \text{cut.01})
+    \exists e\ \texttt{PRD}(e, \text{cut.01})
     & \land \texttt{ARG0}(e, \text{cook}) \land \texttt{ARG1}(e, \text{cake}) \\
     & \land \texttt{ARGM-MNR}(e, \text{knife}) \land \texttt{ARGM-LOC}(e, \text{kitchen}) \\
 \end{aligned}
 \end{equation*}
-This is a representation of the event in first order logic. We define a semantic role model for this paper. We join PropBank semantic roles and the special role PRD together as semantic roles. So the semantic role labels we use in this paper are defined in Table \ref{tab:semantic}. As we mention in Section \ref{sec:intro}, semantic arguments can be represented by the syntactic head words, so the notion of \textit{argument} in PropBank role labels is replaced by \textit{event participant}. 
+This is a representation of the event in first order logic. We define a semantic role model for this paper. We join PropBank semantic roles and the special role \texttt{PRD} together as semantic roles. So the semantic role labels we use in this paper are defined in Table \ref{tab:semantic}. As we mention in Section \ref{sec:intro}, semantic arguments can be represented by the syntactic head words, so the notion of \textit{argument} in PropBank role labels is replaced by \textit{event participant}. 
 % * <asayeed@mbl.ca> 2017-11-13T22:45:29.318Z:
 % 
 % Again do we need to commit to this kind of representation here?  I'm not saying categorically not to do it, merely that it needs to be justified.
@@ -342,7 +343,7 @@ This is a representation of the event in first order logic. We define a semantic
 
 
 \subsection{Event-Participant Embedding} \label{sec:epe}
-After obtaining the semantic role model, we define the symbolic representation for words. Word $a_i$ is encoded as one-hot row vector $\mathbf{w}_i$ where $|\mathbf{w}_i| = |V|$ and $V$ is the word vocabulary. In this vector space, words are mutual exclusive to each other. Similarly, we can represent semantic role label $b_j$ using one-hot encoded column vector $\mathbf{r}_j$ where $|\mathbf{r}_j| = |R|$ and $R$ is the set of semantic role labels. 
+After obtaining the semantic role model, we define the symbolic representation for words. Word $a_i$ with identifier $i$ is encoded as one-hot row vector $\mathbf{w}_i$ where $|\mathbf{w}_i| = |V|$ and $V$ is the word vocabulary. In this vector space, words are mutual exclusive to each other. Similarly, we can represent semantic role label $b_j$ with identifier $j$ using one-hot encoded column vector $\mathbf{r}_j$ where $|\mathbf{r}_j| = |R|$ and $R$ is the set of semantic role labels. 
 
 Further, we need to obtain a distributed representation that is continuous in the feature space. So we compute the inner product between $\mathbf{w}_i$ and a embedding matrix $\mathbf{A} \in \mathbb{R}^{|V| \times d}$ as $\mathbf{A}_{(i)} = \mathbf{w}_i \mathbf{A}$. The vector $\mathbf{w}_i$ is now mapped to low-dimensional vector $\mathbf{A}_{(i)} \in \mathbb{R}^d$ which is the $i$-th row of matrix $\mathbf{A}$. The symbolic representation of words is transformed into word embedding. 
 
@@ -350,7 +351,7 @@ In addition to word embedding, we want to learn the representation of words give
 
 
 \subsection{Tensor Factorisation} \label{sec:tf}
-There are $|V| \times |R| \times d$ parameters in the order-3 tensor $\mathbf{T}$. Since word vocabulary size $|V|$ is often very big (more than $50,000$), the number of parameters in the tensor grows tremendously when $|R|$ or $d$ increases, which makes the model hard to converge. The huge number of parameters in event-participant embedding can result in curse of dimensionality. Moreover, \citep{tilk2016event} pointed out that this kind of embedding tensor lacks parameter sharing across word embedding matrices between different role labels, while words with the same semantic role label actually have common characteristics. In order to capture these characteristics, we need a method to share weights between word embedding matrices. 
+There are $|V| \times |R| \times d$ parameters in the order-3 tensor $\mathbf{T}$. Since word vocabulary size $|V|$ is often very big (more than $30,000$), the number of parameters in the tensor grows tremendously when $|R|$ or $d$ increases, which makes the model hard to converge. The huge number of parameters in event-participant embedding can result in curse of dimensionality. Moreover, \citep{tilk2016event} pointed out that this kind of embedding tensor lacks parameter sharing across word embedding matrices between different role labels, while words with the same semantic role label actually have common characteristics. In order to capture these characteristics, we need a method to share weights between word embedding matrices. 
 
 We perform tensor rank decomposition \citep{hitchcock1927expression} on the embedding tensor in real space:
 \begin{equation} \label{eq:trd-org}
@@ -435,7 +436,7 @@ The embedding vectors are composed using sum method into an representation of wo
         &= \sum_{l=1}^{L} \mathbf{p}_{l} \\
 \end{aligned}
 \end{equation}
-where $l$ is the index of the participant and $L$ is the number of participants in current event $e$. Then it passes through one non-linearity layer with parametric rectified linear unit \citep{he2015delving} as follow:
+where $l$ is the index of the word and $L$ is the number of words in current event $e$. Then it passes through one non-linearity layer with parametric rectified linear unit \citep{he2015delving} as follow:
 \begin{equation} \label{eq:nonlinearity-nnrf}
 \begin{aligned}
     \mathbf{h}
